fix: non-empty default for defineList, force recompile